# poetry_pep621-poetry-core-2

./: .whitesource  README.md  autotest_config.json  pyproject.toml
