[project]
name = "poetry2-pep621-poc"
version = "0.1.0"
description = "PEP 621 Poetry 2.x project. Repro for TKA-10596 — build-system requires poetry-core>=2.4.1."
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
]

[build-system]
requires = ["poetry-core>=2.4.1"]
build-backend = "poetry.core.masonry.api"
